infra/k8s/overlays/infra/demo/patch-ingress-http-only.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nafura-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls: []
